# prezza-lce

./: CMakeLists.txt  LCEQuery.cpp  README.md  RandomAccess.cpp  createDataStructure.cpp  createDataStructure.hpp  createDatastructure.cpp  lce.hpp  reconstructDataStructure.cpp  testRA  testRandomAccess.cpp  util.hpp
src/: lce.hpp  ramTest.cpp  sparseSuffixSorting.cpp  testCorrectness.cpp  testTime.cpp  util.hpp
test/: access.txt  construction.time  plot.tex  sssTest.txt  time.txt
